--- a/package.json
+++ b/package.json
@@ -6,17 +6,32 @@
   "author": "Kris <kriskuiper74@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf _site && cross-env ELEVENTY_ENV=production eleventy",
-    "dev": "rimraf _site && cross-env ELEVENTY_ENV=development eleventy --serve --watch --port $PORT",
+    "prebuild": "rimraf _site",
+    "build": "run-s build:*",
+    "build:eleventy": "cross-env ELEVENTY_ENV=production eleventy",
+    "build:js": "rollup -c",
+    "build:css": "node-sass src/assets/scss/index.scss _site/styles/index.css",
+    "predev": "rimraf _site",
+    "dev": "run-p dev:*",
+    "dev:eleventy": "cross-env ELEVENTY_ENV=development eleventy --serve --watch --port $PORT",
+    "dev:js": "rollup -c --watch",
+    "dev:css": "chokidar \"src/assets/scss/index.scss\" -c \"yarn run build:css\"",
     "now:init": "now",
     "now:dev": "now dev"
   },
   "dependencies": {},
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "chokidar-cli": "^2.1.0",
     "cross-env": "^7.0.2",
     "html-minifier": "^4.0.0",
+    "node-sass": "^4.14.1",
     "now": "^19.0.1",
-    "rimraf": "^3.0.2"
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.10.0",
+    "rollup-plugin-terser": "^5.3.0"
   }
 }
